Remove all usages of Stream.toList(). It should work but this was reported from before.